[package]
description = "Parse the output of `std::fmt::Debug`"
edition = "2021"
license = "MIT/Apache-2.0"
name = "heuristic_debug_parser"
readme = "README.md"
repository = "https://github.com/Sergo007/heuristic_debug_parser"
version = "0.3.0"

[dependencies]
anyhow = "1.0"
nom = "7.1.0"
ordered-float = "5.1.0"
